hella refactoring, changing outlets to bootstrap modals and stuff

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
             <td>{{id}}</td>
             <td>{{title}}</td>
             <td>
-              {{#link-to 'editshow' this
-                classNames="btn btn-default btn-sm" id=editbutton_id}}
+              <button {{action confirmEdit this}} class="btn btn-default btn-sm">
                 <span class="glyphicon glyphicon-pencil"></span>変更
-              {{/link-to}}
+              </button>
             </td> 
             <td>{{episode}}</td>
             <td>
@@ -90,32 +89,53 @@
           </td>
         </tr>
       </table>
-      {{#if deleteConfirmation}}
-        {{partial 'shows/delete'}}
-      {{else}}
-        {{outlet}}
-      {{/if}}
     </div>
-  </script>
 
-  <script type="text/x-handlebars" id="shows/delete">
-    <div class="row">
-      <div class="col-sm-offset-3 col-sm-6">
-        <div class="panel panel-danger">
-          <div class="panel-heading">
-            <h3 class="panel-title">"#{{deleteId}}: {{deleteTitle}}" を消してもいいの？</h3>
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="deleteModalLabel">完全消す目的確認</h4>
           </div>
-          <div class="panel-body">
-            マジでこれで最後だよ！
-            <div class="text-right">
-              <button {{action delete}} class="btn btn-default">イェス</button>
-              <button {{action cancelDelete}} class="btn btn-default">戻る</a>
-            </div>
+          <div class="modal-body alert-danger">
+            <h3>"{{modalTitle}}" 消してもいいの？</h3>
+          </div>
+          <div class="modal-footer">
+            <button {{action cancelDelete}} type="button" class="btn btn-default" data-dismiss="modal">戻る</button>
+            <button {{action delete}} type="button" class="btn btn-danger">イェス</button>
           </div>
         </div>
       </div>
     </div>
-  </script>  
+
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="deleteModalLabel">変更使用フォム</h4>
+          </div>
+          <div class="modal-body">
+            <form role="form">
+              <div class="form-group">
+                <label for="titleInput">Title</label>
+                {{input value=modalTitle placeholder=title classNames="form-control" id="titleInput" type="text"}}
+              </div>
+              <div class="form-group">
+                <label for="episodeInput">Episode</label>
+                {{input value=modalEpisode placeholder=episode classNames="form-control" id="episodeInput" type="number"}}
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button {{action cancelEdit}} type="button" class="btn btn-default">戻る</button>
+            <button {{action edit}} type="button" class="btn btn-primary">入力</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </script>
 
   <script type="text/x-handlebars" id="editshow">
     <div class="row">
@@ -134,19 +154,6 @@
         </div>
       </div>
     </div>
-  </script>
-
-  <script type="text/x-handlebars" id="editshow/form">
-    <form role="form">
-      <div class="form-group">
-        <label for="titleInput">Title</label>
-        {{input value=newTitle placeholder=title classNames="form-control" id="titleInput" type="text"}}
-      </div>
-      <div class="form-group">
-        <label for="episodeInput">Episode</label>
-        {{input value=newEpisode placeholder=episode classNames="form-control" id="episodeInput" type="number"}}
-      </div>
-    </form>
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
