--- a/index.html
+++ b/index.html
@@ -157,14 +157,12 @@
   </script>
 
   <script src="js/libs/jquery-1.10.2.js"></script>
-  <script src="js/libs/handlebars-1.1.2.js"></script>
-  <script src="js/libs/ember-1.3.1.js"></script>
-  <script src="js/libs/ember-data.js"></script>
+  <script src="js/libs/handlebars.min.js"></script>
+  <script src="js/libs/ember.min.js"></script>
+  <script src="js/libs/ember-data.min.js"></script>
   <script src="js/libs/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/router.js"></script>
   <script src="js/models.js"></script>
-  <!-- to activate the test runner, add the "?test" query string parameter -->
-  <script src="tests/runner.js"></script>
 </body>
 </html>
