--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
   <script src="js/libs/handlebars.min.js"></script>
   <script src="js/libs/ember.min.js"></script>
   <script src="js/libs/ember-data.min.js"></script>
+  <script src="js/libs/localstorage_adapter.js"></script>
   <script src="js/libs/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/router.js"></script>
