--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/d3a51db0.app.min.css">
+  <link rel="stylesheet" href="assets/d3a51db0.app.min.css">
 
   <!-- for more details visit: https://github.com/yeoman/grunt-usemin -->
 
-  <script src="/assets/acb720d0.config.min.js"></script>
+  <script src="assets/acb720d0.config.min.js"></script>
 
-  <script src="/assets/3cfe4fcc.vendor.min.js"></script>
+  <script src="assets/3cfe4fcc.vendor.min.js"></script>
 
-  <script src="/assets/73794b71.app.min.js"></script>
+  <script src="assets/73794b71.app.min.js"></script>
 
 </head>
 <body>
